Work with network added comments loading

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,6 @@
     разработанная студией Guerrilla Games и выпущенная в 2017 году
         для игровых платформ PlayStation 4 и PC.</string>
     <string name="button_login">Войти</string>
+    <string name="comments_name">Комментарии</string>
 
 </resources>
